# test

./: README.md
VC/: VS2019 x64 Native Tools コマンド プロンプト.lnk  vc19.bat
test01/: dirent.h  savedir.cpp  savedir.h  scandir.cpp  scandir.h  test01.cpp  test01.sln  test01.vcxproj  test01.vcxproj.filters  xgit.cpp  xgit.h
test02/: test02.cpp
test03/: ping1.cpp  test03.cpp  test03_1.cpp
test04/: .vimrc  .zshrc  Dockerfile
test05/: Dockerfile
test_libjpeg/: CMakeLists.txt  main.c
test_libjpeg/libjpeg/: CMakeLists1.txt  CMakeLists2.txt  jmemnobs.c  tags
